# ROS-Cbot

./: CMakeLists.txt  README.md  genKML.py  lqr_gains.yaml  package.xml
cbot/: CMakeLists.txt  package.xml
cbot/config/: params.yaml
cbot/launch/: cbot.launch
cbot_ROV/src/: teleop.py
cbot_actuators/: CMakeLists.txt  package.xml
cbot_actuators/cfg/: actuators.cfg
cbot_actuators/config/: params.yaml
cbot_actuators/include/cbot_actuators/: actuators_node.hpp
cbot_actuators/launch/: cbot_actuators.launch
cbot_actuators/src/: sendThrusterData.cpp  send_thr_data.cpp  thruster_node.cpp
cbot_common/: CMakeLists.txt  package.xml
cbot_common/include/cbot_common/: serial.hpp
cbot_common/src/interfaces/: serial.cpp
cbot_control/: CMakeLists.txt  package.xml
cbot_control/cfg/: controllers.cfg
cbot_control/config/: SafetyParams.yaml  lqr_gains.yaml
cbot_control/include/cbot_control/: controllers.hpp  controllers_node.hpp
cbot_control/launch/: cbot_control.launch
cbot_control/src/: control_node.cpp  controllers.cpp
cbot_guidance/: CMakeLists.txt  package.xml
cbot_guidance/cfg/: guidance.cfg
cbot_guidance/config/: params.yaml
cbot_guidance/include/cbot_guidance/: guidance.hpp  guidance_node.hpp  matrix.hpp  utm.hpp
cbot_guidance/launch/: cbot_guidance.launch
cbot_guidance/src/: guidance.cpp  guidance_node.cpp  matrix.cpp  utm.cpp
cbot_manager/: CMakeLists.txt  package.xml
cbot_manager/launch/: cbot_manager.launch  manager.launch
cbot_manager/src/: GUI.py  GUI.spec  GUI2.py  MissionCompiler.py  cbot_gui.py  comm_manager.py  mediator.py  pitch.txt  pitchRate.txt  plotData.py  plottingData.py  result.json  result2.json  roll.txt  rollRate.txt  testLaunch.py  yaw.txt  yawRate.txt
cbot_manager/src/GUI/: GUI.py  Mission.txt  MissionCompiler.py  genKml.py  in.kml  kmlCompiler.py  mission1.kml  out.kml  result.json
cbot_mission/: CMakeLists.txt  package.xml
cbot_mission/include/cbot_mission/: utm.hpp
cbot_mission/launch/: cbot_mission.launch  mission_parser.launch
cbot_mission/src/: GUI2.py  Mission.txt  MissionCompiler.py  mission_parser.py  publishPath.cpp  result.json  result2.json  test.kml  utm.cpp
cbot_mission/src/Compilers/: kmlCompiler.py
cbot_mission/src/Handlers/: ActuatorHandler.py  ControllerHandler.py  GuidanceHandler.py
cbot_mission/src/Missions Docs/: Example_Mission_File.txt  List.txt  Mission Types  Mission.txt  NIO.txt
cbot_monitoring/: CMakeLists.txt  package.xml
cbot_monitoring/cfg/: safety.cfg
cbot_monitoring/config/: SafetyParams.yaml
cbot_monitoring/include/cbot_monitoring/: safety_node.hpp
cbot_monitoring/launch/: cbot_monitoring.launch
cbot_monitoring/src/: safety_monitor_node.cpp  safety_node.cpp
cbot_navigation/: CMakeLists.txt  package.xml
cbot_navigation/config/: params.yaml
cbot_navigation/launch/: cbot_navigation.launch
cbot_navigation/src/: navigation_node.cpp  utm.cpp
cbot_ros_msgs/: CMakeLists.txt  package.xml
cbot_ros_msgs/actuators/msg/: ThrusterCMDM.msg  ThrusterInputs.msg
cbot_ros_msgs/controller/msg/: ControllerInputs.msg
cbot_ros_msgs/guidance/msg/: Pose.msg
cbot_ros_msgs/guidance/srv/: ArcInputs.srv  LineInputs.srv  WaypointInputs.srv
cbot_ros_msgs/mission_parser/srv/: String.srv
cbot_ros_msgs/monitoring/: SensorsStatus.msg
cbot_ros_msgs/sensors/: AHRS.msg  GPS.msg
cbot_ros_msgs/sensors/msg/: GPS.msg
cbot_ros_msgs/srv/: ControllerInputs.srv  ControllerSettings.srv  GuidanceInputs.srv  MissInputs.srv  ThrusterCMDM.srv  ThrusterControl.srv  ThrusterInputs.srv
cbot_rov/: CMakeLists.txt  package.xml
cbot_sensors/: CMakeLists.txt  package.xml
cbot_sensors/include/cbot_sensors/: ahrs.hpp  gps.hpp  imu.hpp
cbot_sensors/include/cbot_sensors/AHRS/: vnav.hpp
cbot_sensors/include/cbot_sensors/GPS/: simple_gps.hpp
cbot_sensors/launch/: cbot_sensors.launch
cbot_sensors/src/: ahrs.cpp  gps.cpp  imu.cpp  sensor_node.cpp
cbot_sensors/src/AHRS/: ahrs.cpp  vnav.cpp
cbot_sensors/src/GPS/: gps.cpp  simple_gps.cpp
config/: params.yaml
include/asv_ros_revamp/common/: serial.hpp
include/asv_ros_revamp/control/: controllers.hpp
include/asv_ros_revamp/guidance/: guidance.hpp  matrix.hpp
include/asv_ros_revamp/navigation/: utm.hpp
include/asv_ros_revamp/sensors/: ahrs.hpp  gps.hpp
launch/: asv.launch
msg/: NAVIGATION.msg
src/actuators/: thruster_node.cpp
src/common/: serial.cpp
src/control/: control_node.cpp  controllers.cpp
src/data_acquisition/: data_acq.cpp
src/guidance/: guidance.cpp  guidance_node.cpp  matrix.cpp
src/navigation/: navigation_node.cpp  utm.cpp
src/safety/: safety_node.cpp
src/sensors/: ahrs.cpp  gps.cpp
testing/: set_up_virtual_ports.sh
