<?xml version="1.0"?>
<package>
  <name>cbot_mission</name>
  <version>0.1.0</version>
  <description>The cbot_mission package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mohitsushil83@gmail.com">Mohit Gupta</maintainer>

  <license>GPLv3</license>

  <author email="mohitsushil83@gmail.com">Mohit Gupta</author>

  <build_depend>message_generation</build_depend>
  <build_depend>cbot_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cbot_ros_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
